ImmutableList -> List (legal-Java fix) -- ImmutableList is Guava, not JDK, so a .zinc using it would not compile under javac (broke the legal-Java rule); rename to List with List.of/List.copyOf (real JDK 9/10). Semantics unchanged: List<T> = receive/iterate Erlang list, mutators = transpile error (stricter than Java's mutable interface, so valid zinc stays a subset of valid Java); ArrayList<T> = build/index, untouched. Renamed across CodeGen, Main reserved set, examples, dogfood, e2e contracts, ROADMAP (settled-block rationale rewritten). 55/55 e2e green.
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>